Adding in support for Educates