@@ -1,45 +1,47 @@
 package com.vmware.tanzu.se.waasportal.service;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-import com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortal;
-import com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortalList;
+import dev.educates.training.V1beta1TrainingPortal;
+import dev.educates.training.V1beta1TrainingPortalList;
 import com.vmware.tanzu.se.waasportal.model.TrainingPortal;
+import com.vmware.tanzu.se.waasportal.service.EducatesApiService.EnvType;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.convert.ConversionService;
 import org.springframework.stereotype.Service;
 
-import io.kubernetes.client.openapi.ApiClient;
+import io.kubernetes.client.common.KubernetesListObject;
+import io.kubernetes.client.common.KubernetesObject;
 import io.kubernetes.client.openapi.ApiException;
+import io.kubernetes.client.openapi.models.V1ListMeta;
 import io.kubernetes.client.util.generic.GenericKubernetesApi;
 import io.kubernetes.client.util.generic.options.ListOptions;
 
 @Service
 public class TrainingPortalService {
 
-    private ApiClient apiClient;
+    private EducatesApiService apiService;
     private ConversionService conversionService;
 
-    @Autowired
-    public TrainingPortalService(ApiClient apiClient, ConversionService conversionService) {
-        this.apiClient = apiClient;
+    public TrainingPortalService(EducatesApiService apiService, ConversionService conversionService) {
+        this.apiService = apiService;
         this.conversionService = conversionService;
     }
 
     public TrainingPortal[] getTrainingPortalsForUser(String user) {
-        GenericKubernetesApi<V1beta1TrainingPortal,V1beta1TrainingPortalList> trainingPortalClient = 
-            new GenericKubernetesApi<>(V1beta1TrainingPortal.class, V1beta1TrainingPortalList.class, "learningcenter.tanzu.vmware.com", "v1beta1", "trainingportals", apiClient);
-
         String userParts[] = user.split("@");
         String ownerEmailPrefix = userParts[0];
         String ownerEmailDomain = userParts[1];
 
         ListOptions ownerLabels = new ListOptions();
-        ownerLabels.setLabelSelector(String.format("waas/owner-email-prefix=%s,waas/owner-email-domain=%s", ownerEmailPrefix, ownerEmailDomain));
+        ownerLabels.setLabelSelector("waas/owner-email-prefix=%s,waas/owner-email-domain=%s".formatted(ownerEmailPrefix, ownerEmailDomain));
 
-        V1beta1TrainingPortalList portalList;
+        List<TrainingPortal> portals = new ArrayList<TrainingPortal>();
+
+        GenericKubernetesApi<? extends KubernetesObject,? extends KubernetesListObject> trainingPortalClient = apiService.getTrainingPortalClient();
+        KubernetesListObject portalList = new EmptyKubernetesListObject();
         try {
             portalList = trainingPortalClient.list(ownerLabels)
                 .throwsApiException().getObject();
@@ -48,16 +50,15 @@ public class TrainingPortalService {
             throw new RuntimeException(e);
         }
 
-        List<TrainingPortal> portals = new ArrayList<TrainingPortal>();
-        for(V1beta1TrainingPortal portal : portalList.getItems()) {
+        for(KubernetesObject portal : portalList.getItems()) {
             portals.add(conversionService.convert(portal, TrainingPortal.class));
         }
+
         return portals.toArray(new TrainingPortal[portals.size()]);
     }
 
     public TrainingPortal getTrainingPortal(String name) {
-        GenericKubernetesApi<V1beta1TrainingPortal,V1beta1TrainingPortalList> trainingPortalClient = 
-            new GenericKubernetesApi<>(V1beta1TrainingPortal.class, V1beta1TrainingPortalList.class, "learningcenter.tanzu.vmware.com", "v1beta1", "trainingportals", apiClient);
+        GenericKubernetesApi<? extends KubernetesObject,? extends KubernetesListObject> trainingPortalClient = apiService.getTrainingPortalClient();
 
         TrainingPortal trainingPortal = null;
         
@@ -75,15 +76,29 @@ public class TrainingPortalService {
     }
 
     public TrainingPortal save(TrainingPortal trainingPortal) {
-        GenericKubernetesApi<V1beta1TrainingPortal,V1beta1TrainingPortalList> trainingPortalClient = 
-            new GenericKubernetesApi<>(V1beta1TrainingPortal.class, V1beta1TrainingPortalList.class, "learningcenter.tanzu.vmware.com", "v1beta1", "trainingportals", apiClient);
- 
+        GenericKubernetesApi<? extends KubernetesObject,? extends KubernetesListObject> unknownTrainingPortalClient = apiService.getTrainingPortalClient();
+
         try {
-            V1beta1TrainingPortal savedTrainingPortal = trainingPortalClient.create(
-                conversionService.convert(trainingPortal, V1beta1TrainingPortal.class)
-            )
-            .throwsApiException()
-            .getObject();
+            KubernetesObject savedTrainingPortal = null;
+            if(EnvType.LEARNING_CENTER == apiService.getEnvType()) {
+                @SuppressWarnings("unchecked")
+                GenericKubernetesApi<com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortal,com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortalList> trainingPortalClient = 
+                    (GenericKubernetesApi<com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortal,com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortalList>)unknownTrainingPortalClient;
+                savedTrainingPortal = trainingPortalClient.create(
+                    conversionService.convert(trainingPortal, com.vmware.tanzu.learningcenter.models.V1beta1TrainingPortal.class)
+                )
+                .throwsApiException()
+                .getObject();
+            } else if (EnvType.EDUCATES == apiService.getEnvType()) {
+                @SuppressWarnings("unchecked")
+                GenericKubernetesApi<V1beta1TrainingPortal,V1beta1TrainingPortalList> trainingPortalClient = 
+                    (GenericKubernetesApi<V1beta1TrainingPortal,V1beta1TrainingPortalList>)unknownTrainingPortalClient;
+                savedTrainingPortal = trainingPortalClient.create(
+                    conversionService.convert(trainingPortal, V1beta1TrainingPortal.class)
+                )
+                .throwsApiException()
+                .getObject();
+            }
             return conversionService.convert(savedTrainingPortal, TrainingPortal.class);
         }
         catch (ApiException e) {
@@ -92,9 +107,8 @@ public class TrainingPortalService {
     }
 
     public void delete(String name) {
-        GenericKubernetesApi<V1beta1TrainingPortal,V1beta1TrainingPortalList> trainingPortalClient = 
-            new GenericKubernetesApi<>(V1beta1TrainingPortal.class, V1beta1TrainingPortalList.class, "learningcenter.tanzu.vmware.com", "v1beta1", "trainingportals", apiClient);
- 
+        GenericKubernetesApi<? extends KubernetesObject,? extends KubernetesListObject> trainingPortalClient = apiService.getTrainingPortalClient();
+
         try {
             trainingPortalClient.delete(name).throwsApiException();
         }
@@ -102,5 +116,5 @@ public class TrainingPortalService {
             throw new RuntimeException(e);
         }
     }
-    
+
 }
